force-app/main/default/objects/Promotion_Item_Temp__c/Promotion_Item_Temp__c.object-meta.xml
<CustomObject>
    <description>This objects used to process promotion item (Task https://beunik.atlassian.net/browse/YMVN-328)</description>
    <label>Promotion Item Temp</label>
    <nameField>
        <displayFormat>PT-{00000000}</displayFormat>
        <label>Promotion Item Temp Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotion Item Temps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>