force-app/main/default/objects/Promotion_Item_Temp__c/fields/Combo_Price__c.field-meta.xml
<CustomField>
    <fullName>Combo_Price__c</fullName>
    <label>Combo Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>