force-app/main/default/objects/Promotion_Item_Temp__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>155</length>
    <type>Text</type>
</CustomField>