force-app/main/default/objects/Promotion_Item_Temp__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Promotion Item Temps</relationshipLabel>
    <relationshipName>Promotion_Item_Temps</relationshipName>
    <type>Lookup</type>
</CustomField>