force-app/main/default/objects/Promotion_Item_Temp__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Promotion Item Temps</relationshipLabel>
    <relationshipName>Promotion_Item_Temps</relationshipName>
    <type>Lookup</type>
</CustomField>