force-app/main/default/objects/Promotion_Item_Temp__c/fields/Promotion__c.field-meta.xml
<CustomField>
    <fullName>Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promotion</label>
    <referenceTo>Promotion__c</referenceTo>
    <relationshipLabel>Promotion Item Temps</relationshipLabel>
    <relationshipName>Promotion_Item_Temps</relationshipName>
    <type>Lookup</type>
</CustomField>