force-app/main/default/objects/Promotion_Item_Temp__c/fields/Promotion_Type__c.field-meta.xml
<CustomField>
    <fullName>Promotion_Type__c</fullName>
    <label>Promotion Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>