force-app/main/default/objects/Promotion_Item_Temp__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Promotion Item Temps</relationshipLabel>
    <relationshipName>Promotion_Item_Temps</relationshipName>
    <type>Lookup</type>
</CustomField>