force-app/main/default/objects/Promotion_Item_Temp__c/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>RecordTypeId</label>
    <length>155</length>
    <type>Text</type>
</CustomField>