force-app/main/default/objects/Promotion_Item_Temp__c/fields/SaveId__c.field-meta.xml
<CustomField>
    <fullName>SaveId__c</fullName>
    <description>This field use to save Id of promotionItem or promotion</description>
    <label>SaveId</label>
    <length>155</length>
    <type>Text</type>
</CustomField>