force-app/main/default/objects/Promotion_Item_Temp__c/fields/Voucher_Amount__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Amount__c</fullName>
    <label>Voucher Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>